--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -24,3 +24,12 @@ body {
 	border-radius: 0;
 	box-shadow: 0px 1px 3px #2a2a2a;
 }
+
+.navbar-inverse .navbar-brand {
+	color: #E3E85A;
+	font-family: 'Open sans Condensed', sans-serif;
+}
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
+
+@import "bootstrap";
