Changes to the navbar, adding new fonts and edits to the file

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -27,9 +27,9 @@ body {
 
 .navbar-inverse .navbar-brand {
 	color: #E3E85A;
-	font-family: 'Open sans Condensed', sans-serif;
+	font-family: 'chunkfiveroman', sans-serif;
+	font-size:26px;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 
 @import "bootstrap";
