added devise gem - it's for user authentication

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -5,7 +5,8 @@
   background:#fff;
   border:1px solid #ccc;
   border-color:#e4e4e4 #bebebd #bebebd #e4e4e4;
-  margin-top:15px;
+  margin-top:10px;
+  margin-bottom:15px;
   padding:20px;
 }
 
