--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
        </li>
        	</ul>
        <ul class="nav navbar-nav navbar-right">
+        <% if user_signed
         <li><a href="#">Link</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
