--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,6 +7,9 @@
 		<i><%= place.address %></i><br /><br />
 		<p><%= place.description %></p><br />
 
+		<% if place.user.present? %>
+			<small><%= place.user.email %></small>
+		<% end %>
 	</div>
 
 	<hr />
