--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -36,4 +36,11 @@ body {
 	clear:both;
 }
 
+.field_with_errors {
+	color: #ff3333;
+	background-color: #FFEEEE;
+	border-radius: 3px;
+	padding:8px;
+}
+
 @import "bootstrap";
