--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -6,10 +6,8 @@
 
 	<style>
       html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
+        height: 300px;
+       }
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script>
