Zooming into our map

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,17 +4,16 @@
 	<br/><br/>
 	<p><%= @place.description %></p>
 
-	<style>
-      html, body, #map-canvas {
+	#map-canvas {
         height: 300px;
        }
-    </style>
+    
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script>
 function initialize() {
   var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
   var mapOptions = {
-    zoom: 4,
+    zoom: 12,
     center: myLatlng
   }
   var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
