adjusting map settings by adding spacing

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -25,6 +25,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
  	<div id="map-canvas"></div>
+  <% end %>
+
+  <br />
 
 	<div class="pull-right">
 	<% if current_user && current_user == @place.user %>
