--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,7 +39,8 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <div class="clear"></div>
 <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
   <%= f.input :message %>
-  <%= f.input :rating %>
+  <%= f.input :rating,  :as => :select, :collection => Comment::RATINGS %>
+
   <%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
 
 <h1>Comments</h1>
@@ -47,7 +48,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <% @place.comments.each do |comment| %>
   <div>
     <blockquote>
-      <b><%= comment.rating %></b> - 
+      <%= if comment.humanized_rating.present? %>
+        <b><%= comment.humanized_rating %></b> -
+      <% end %> 
         <%= comment.message %>
       <small><%= comment.user.email %></small>
     </blockquote>
