--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -48,7 +48,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <% @place.comments.each do |comment| %>
   <div>
     <blockquote>
-      <%= if comment.humanized_rating.present? %>
+      <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
       <% end %> 
         <%= comment.message %>
