--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,13 +39,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <div class="clear"></div>
 
 
-
-
-<!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
-
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -63,16 +56,24 @@ google.maps.event.addDomListener(window, 'load', initialize);
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           <%= f.submit "Add a Comment", :class => 'btn btn-primary' %>
         </div>
-        
+        <% end %>
+
       </div>
     </div>
   </div>
+
+<div class="col-xs-10 col-xs-offset-1">
+<h1 class="pull-left">Comments</h1>
+<!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
 </div>
 
-<h1>Comments</h1>
+<div class="clear"></div>
 
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-xs-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
@@ -81,5 +82,5 @@ google.maps.event.addDomListener(window, 'load', initialize);
       <small><%= comment.user.email %></small>
     </blockquote>
   </div>
- <% end %> 
+
 <% end %>
