--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -16,21 +16,21 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'slider1.jpg' %>
+      <%= image_tag 'slider1.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
-        Find the best places to eat in town
+        Find the best places to eat
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg' %>
+      <%= image_tag 'slider2.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
-      In the mood for some sophisticated dining?
+      Sophisticated dining
       </div>
     </div>
     <div class="item">
-    <%= image_tag 'slider3.jpg' %>
+    <%= image_tag 'slider3.jpg', :class => 'img-responsive' %>
     <div class="carousel-caption">
-      Looking for hotdogs?
+      Or hotdogs. We've got it all!
     </div>
   </div>
 </div>
