--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -15,19 +15,19 @@
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
-    <div class="item active">
+    <div class="item active col-xs-5 col-xs-offset-3">
       <%= image_tag 'slider1.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
         Find the best places to eat
       </div>
     </div>
-    <div class="item">
+    <div class="item col-xs-5 col-xs-offset-3">
       <%= image_tag 'slider2.jpg', :class => 'img-responsive' %>
       <div class="carousel-caption">
       Sophisticated dining
       </div>
     </div>
-    <div class="item">
+    <div class="item col-xs-5 col-xs-offset-3">
     <%= image_tag 'slider3.jpg', :class => 'img-responsive' %>
     <div class="carousel-caption">
       Or hotdogs. We've got it all!
