ch50 - showing comments on user page

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -30,7 +30,7 @@
     <div class="item col-xs-5 col-xs-offset-3">
     <%= image_tag 'slider3.jpg', :class => 'img-responsive' %>
     <div class="carousel-caption">
-      Or hotdogs. We've got it all!
+      Or casual dining. We've got it all!
     </div>
   </div>
 </div>
