--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,25 @@
 <div class="booyah-box">
-	<div class="col-xs-4">
-	</br></br>
-		<%= image_tag 'user.png' %>
-	</div>
-
+	<div class="row">
+		<div class="col-xs-4">
+			<%= image_tag 'user.png' %>
+		</div>
 	<div class="col-xs-8">
 		<h1><%= @user.email %></h1>
 		<h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
 		<h4><%= @user.comments.count %> total comments</h4>
 		<h4><%= @user.comments.where(:rating => '5_stars').count %> total 5 star reviews</h4>
+		</div>
 	</div>
-	<div class="clear"></div>
 </div>
 
-</br></br>
+
 <h1 class="text-center">My Comments</h1>
-</br></br>
+	</br>
+	</br>
 <% @user.comments.each do |comment| %>
-	<div class="col-xs-12 col-sm-6">
+	<div class="booyah-box col-xs-12 col-sm-6">
 		<h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place) %></h2>
-		
-    	<blockquote>
+		<blockquote>
      		<% if comment.humanized_rating.present? %>
         	<b><%= comment.humanized_rating %></b> -
       	 	<% end %> 
@@ -30,13 +29,15 @@
   	</div>
 <% end %>
 
-<div class="clear"></div>
-<br /><br />
+<div class="clearfix"></div>
+	<br />
+	<br />
 <h2 class="text-center">My Places</h2>
-<br /><br />
+	<br />
+	<br />
 
 	<% @user.places.each do |place| %>
-		<div class="booyah-box col-xs-10 col-xs-offset-1">
+		<div class="booyah-box col-xs-12 col-sm-12">
 			<h1><%= link_to place.name, place_path(place) %></h1><br />
 			<i><%= place.address %></i><br />
 			<p><%= place.description %></p><br />
